--- a/the project itself/src/app/shared/error/error.component.html
+++ b/the project itself/src/app/shared/error/error.component.html
@@ -1,6 +1,6 @@
 <div class="mainbox">
     <i class="far fa-question-circle fa-spin"></i>
-    <div class="msg">Ooops! Page Not Found. :(<p>Let's go <a routerLink="/home">home</a> and try from there.</p>
+    <div class="msg">Page Not Found.<p>Go to<a routerLink="/home">home</a> and try from there.</p>
     </div>
 </div>
   
