--- a/the project itself/src/app/core/navigation-bar/navigation-bar.component.css
+++ b/the project itself/src/app/core/navigation-bar/navigation-bar.component.css
@@ -1,34 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
 
 .nav-wrapper {
+    position:fixed;
+    top: 0;
+    left: 0;
     text-decoration: none;
-    font-family: "Madimi One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    text-shadow: 2px 2px #000000;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: navy;
     display: flex;
     width: 100%;
-    height: 30px;
+    height: 80px;
     padding: 10px;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
     z-index: 1000;
 }
 
 .nav-btn {
-    border: 1px solid white;
+    border: 1px solid navy;
     margin-left: 10px;
     padding: 5px 10px;
 }
 
 .nav-btn:hover {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid navy;
     color: rgb(255, 255, 255);
-    background-color: rgb(0, 125, 125);
+    background-color: navy;
+    cursor: pointer;
+}
+
+.logo img{
+    height: 70px;
+}
+.logo{
+    position: fixed;
+    left: 50px;
     cursor: pointer;
 }
