--- a/the project itself/src/app/app.component.html
+++ b/the project itself/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-authenticate>
   <app-navigation-bar />
-  <router-outlet />
+
+  <div class="router">
+    <router-outlet />
+  </div>
+
   <app-footer />
 </app-authenticate>
