--- a/the project itself/src/app/core/footer/footer.component.html
+++ b/the project itself/src/app/core/footer/footer.component.html
@@ -1,3 +1,16 @@
 <footer>
-    <p>&copy;2024 - {{ creator }}</p>
+  <p>&copy;2024 - {{ creator }}</p>
+  <h2>Contact the Creator:</h2>
+  <p>
+    If you have any questions, feedback, or just want to say hi, feel free to
+    reach out:
+  </p>
+  <ul>
+    <li>
+      Email:
+      <a href="mailto:nikolay.b.todorov@gmail.com"
+        >nikolay.b.todorov&#64;gmail.com</a
+      >
+    </li>
+  </ul>
 </footer>
