--- a/the project itself/src/app/core/footer/footer.component.css
+++ b/the project itself/src/app/core/footer/footer.component.css
@@ -1,22 +1,48 @@
-@import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
-
 footer {
-    width: 100%;
-    background-color: white;
-    color: navy;
-    width: 100%;
-    height: 50px;
-    padding: 10px;
-    font-weight: 500;
-    font-size: large;
-    font-style: normal;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+  width: 100%;
+  background-color: white;
+  color: rgb(18, 18, 157);
+  width: 100%;
+  height: 240px;
+  padding: 10px;
+  font-weight: 500;
+  font-size: large;
+  font-style: normal;
+  text-align: center;
+  position: relative;
+  top: 10px;
+  right: 10px;
 }
 
-p{
-    position: relative;
-    bottom: 6px;
+p {
+  position: relative;
+  bottom: 6px;
+}
+
+h2 {
+  font-size: 2rem;
+  color: rgb(18, 18, 157);
+  margin-bottom: 10px;
+  margin-top: 30px;
+  text-shadow: 3px 2px goldenrod;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  color: rgb(18, 18, 157);
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+ul li a {
+  color: goldenrod;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  text-decoration: underline;
 }
